# microSECoP

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
examples/esp32-wt32eth01/: Cargo.toml  README.md  sdkconfig.defaults
examples/esp32-wt32eth01/.cargo/: config.toml
examples/esp32-wt32eth01/src/: main.rs  node.rs
examples/rp2040-w5500/: Cargo.toml  README.md
examples/rp2040-w5500/src/: main.rs
examples/stm32f429/: Cargo.toml  README.md
examples/stm32f429/src/: main.rs  node.rs
src/: datamodel.rs  http.rs  index.html  json.rs  lib.rs  node.rs  proto.rs  wire.rs
