[package]
name = "usecop-derive"
version = "0.1.0"
edition = "2021"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Rust no_std implementation of the Sample Environment Control Protocol"
keywords = ["scada", "secop", "hardware", "sample-environment", "embedded"]
license = "MIT OR Apache-2.0"
rust-version = "1.63"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
syn = "2.0.39"
quote = "1.0.33"
darling = "0.20.3"
