[package]
name = "usecop-esp32-wt32eth01"
version = "0.1.0"
edition = "2021"
description = "µSECoP example project using the WT32-ETH01 board"
license = "MIT OR Apache-2.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
repository = "https://github.com/birkenfeld/microSECoP"

[dependencies]
# basic processor support
esp-idf-svc = "0.48"
# utilities
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
core2 = "0.4"
heapless = "0.8"
# async
#async-io = "2"
#async-executor = "1"
#futures-lite = "1"

[dependencies.usecop]
# git = "https://github.com/SampleEnvironment/microSECoP"
path = "../.."
features = ["std", "heapless"]

[dependencies.usecop-derive]
# git = "https://github.com/SampleEnvironment/microSECoP"
path = "../../derive"

[build-dependencies]
embuild = { version = "0.31.3", features = ["elf"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
